Fix layout issues on twitter timeline

--- a/assets/stylesheets/components/_twitter.scss
+++ b/assets/stylesheets/components/_twitter.scss
@@ -11,3 +11,9 @@
     width: 68%;
   }
 }
+
+.twitter-timeline.twitter-timeline-rendered {
+
+  width: 100%;
+  margin-bottom: $gutter;
+}
